write tests, refactoring code